Set new formatter - Prettier

--- a/index.html
+++ b/index.html
@@ -1,162 +1,171 @@
 <!DOCTYPE html>
 <html lang="cs">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="style.css" />
+        <title>Dan Šimanský – Portfolio</title>
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Dan Šimanský – Portfolio</title>
-</head>
-
-<body>
-    <div class="container-body">
-        <header>
-            <div class="container-header">
-                <nav>
-                    <ul>
-                        <li><a href="#technologies">Technologies</a></li>
-                        <li><a href="#projects">Projects</a></li>
-                        <li><a href="#other-skills">Other skills</a></li>
-                        <li><a href="#contacts">Contacts</a></li>
-                    </ul>
-                </nav>
-                <div class="container container-nav">
-                    <h1><small>Frontend developer</small> Daniel Šiman&shy;ský</h1>
-                    <div class="header-text">
-                        <p>I’m Dan a front end developer based in Czechia. These are the words that tell you basic stuff
-                            about me. Not
-                            much details but also a bit of my personality shows here.</p>
+    <body>
+        <div class="container-body">
+            <header>
+                <div class="container-header">
+                    <nav>
+                        <ul>
+                            <li><a href="#technologies">Technologies</a></li>
+                            <li><a href="#projects">Projects</a></li>
+                            <li><a href="#other-skills">Other skills</a></li>
+                            <li><a href="#contacts">Contacts</a></li>
+                        </ul>
+                    </nav>
+                    <div class="container container-nav">
+                        <h1><small>Frontend developer</small> Daniel Šiman&shy;ský</h1>
+                        <div class="header-text">
+                            <p>
+                                I’m Dan a front end developer based in Czechia. These are the words that tell you basic
+                                stuff about me. Not much details but also a bit of my personality shows here.
+                            </p>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </header>
+            </header>
 
-        <div class="container">
-            <main>
-                <section class="technologies" id="technologies">
-                    <h2><small>What can I&nbsp;work with</small> Technolo&shy;gies</h2>
-                    <ul>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>JavaScript</li>
-                        <li>Git &amp; GitHub</li>
-                        <li>Gulp &amp; npm scripts</li>
-                    </ul>
-                </section>
+            <div class="container">
+                <main>
+                    <section class="technologies" id="technologies">
+                        <h2>
+                            <small>What can I&nbsp;work with</small>
+                            Technolo&shy;gies
+                        </h2>
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                            <li>Git &amp; GitHub</li>
+                            <li>Gulp &amp; npm scripts</li>
+                        </ul>
+                    </section>
 
-                <section class="projects" id="projects">
-                    <h2><small>What did I do</small> Projects</h2>
+                    <section class="projects" id="projects">
+                        <h2><small>What did I do</small> Projects</h2>
 
-                    <article class="project">
-                        <div class="project-text">
-                            <h3>Project Alpha</h3>
-                            <p>The description of the project, what was done by you, what have you learned. What were
-                                the technologies and methodologies used to create this project.</p>
-                            <p>See the <a href="#">website</a> and check the <a href="https://github.com/Adiosik">source
-                                    code on GitHub</a></p>
-                        </div>
-                        <div class="project-img">
-                            <img src="https://satyr.dev/1296x972/1" 
-                            srcset="
-                            https://satyr.dev/280x4:3/1 280w,
-                            https://satyr.dev/576x4:3/2 576w,
-                            https://satyr.dev/648x4:3/3 648w,
-                            https://satyr.dev/1152x4:3/4 1152w,
-                            https://satyr.dev/1296x4:3/5 1296w" 
-                            " sizes="
-                                (min-width: 960px) 648px,
-                                (min-width: 960px) calc((100vw - 2 * 2rem - 3rem) * 0.609) , 
-                                (min-width: 640px) 576px,
-                                calc(100vw - 2 * 2rem)"
-                            width="1296" height="972" alt="">
-                        </div>
-                    </article>
+                        <article class="project">
+                            <div class="project-text">
+                                <h3>Project Alpha</h3>
+                                <p>
+                                    The description of the project, what was done by you, what have you learned. What
+                                    were the technologies and methodologies used to create this project.
+                                </p>
+                                <p>
+                                    See the <a href="#">website</a> and check the
+                                    <a href="https://github.com/Adiosik">source code on GitHub</a>
+                                </p>
+                            </div>
+                            <div class="project-img">
+                                <img src="https://satyr.dev/1296x972/1" srcset=" https://satyr.dev/280x4:3/1 280w,
+                                https://satyr.dev/576x4:3/2 576w, https://satyr.dev/648x4:3/3 648w,
+                                https://satyr.dev/1152x4:3/4 1152w, https://satyr.dev/1296x4:3/5 1296w" " sizes="
+                                (min-width: 960px) 648px, (min-width: 960px) calc((100vw - 2 * 2rem - 3rem) * 0.609) ,
+                                (min-width: 640px) 576px, calc(100vw - 2 * 2rem)" width="1296" height="972" alt="">
+                            </div>
+                        </article>
 
-                    <article class="project">
-                        <div class="project-text">
-                            <h3>Project Beta</h3>
-                            <p>The description of the project, what was done by you, what have you learned. What were
-                                the technologies and methodologies used to create this project.</p>
-                            <p>See the <a href="#">website</a> and check the <a href="https://github.com/Adiosik">source
-                                    code on GitHub</a></p>
-                        </div>
-                        <div class="project-img">
-                            <img src="https://satyr.dev/1296x972/1" 
-                            srcset="
-                            https://satyr.dev/280x4:3/1 280w,
-                            https://satyr.dev/576x4:3/2 576w,
-                            https://satyr.dev/648x4:3/3 648w,
-                            https://satyr.dev/1152x4:3/4 1152w,
-                            https://satyr.dev/1296x4:3/5 1296w" 
-                            " sizes="
-                                (min-width: 960px) 648px,
-                                (min-width: 960px) calc((100vw - 2 * 2rem - 3rem) * 0.609) , 
-                                (min-width: 640px) 576px,
-                                calc(100vw - 2 * 2rem)"
-                            width="1296" height="972" alt="">
-                        </div>
-                    </article>
+                        <article class="project">
+                            <div class="project-text">
+                                <h3>Project Beta</h3>
+                                <p>
+                                    The description of the project, what was done by you, what have you learned. What
+                                    were the technologies and methodologies used to create this project.
+                                </p>
+                                <p>
+                                    See the <a href="#">website</a> and check the
+                                    <a href="https://github.com/Adiosik">source code on GitHub</a>
+                                </p>
+                            </div>
+                            <div class="project-img">
+                                <img src="https://satyr.dev/1296x972/1" srcset=" https://satyr.dev/280x4:3/1 280w,
+                                https://satyr.dev/576x4:3/2 576w, https://satyr.dev/648x4:3/3 648w,
+                                https://satyr.dev/1152x4:3/4 1152w, https://satyr.dev/1296x4:3/5 1296w" " sizes="
+                                (min-width: 960px) 648px, (min-width: 960px) calc((100vw - 2 * 2rem - 3rem) * 0.609) ,
+                                (min-width: 640px) 576px, calc(100vw - 2 * 2rem)" width="1296" height="972" alt="">
+                            </div>
+                        </article>
 
-                    <article class="project">
-                        <div class="project-text">
-                            <h3>Project Gamma</h3>
-                            <p>The description of the project, what was done by you, what have you learned. What were
-                                the technologies and methodologies used to create this project.</p>
-                            <p>See the <a href="#">website</a> and check the <a href="https://github.com/Adiosik">source
-                                    code on GitHub</a></p>
-                        </div>
-                        <div class="project-img">
-                            <img src="https://satyr.dev/1296x972/1" 
-                            srcset="
-                                https://satyr.dev/280x4:3/1 280w,
-                                https://satyr.dev/576x4:3/2 576w,
-                                https://satyr.dev/648x4:3/3 648w,
-                                https://satyr.dev/1152x4:3/4 1152w,
-                                https://satyr.dev/1296x4:3/5 1296w" 
-                            sizes="
+                        <article class="project">
+                            <div class="project-text">
+                                <h3>Project Gamma</h3>
+                                <p>
+                                    The description of the project, what was done by you, what have you learned. What
+                                    were the technologies and methodologies used to create this project.
+                                </p>
+                                <p>
+                                    See the <a href="#">website</a> and check the
+                                    <a href="https://github.com/Adiosik">source code on GitHub</a>
+                                </p>
+                            </div>
+                            <div class="project-img">
+                                <img
+                                    src="https://satyr.dev/1296x972/1"
+                                    srcset="
+                                        https://satyr.dev/280x4:3/1   280w,
+                                        https://satyr.dev/576x4:3/2   576w,
+                                        https://satyr.dev/648x4:3/3   648w,
+                                        https://satyr.dev/1152x4:3/4 1152w,
+                                        https://satyr.dev/1296x4:3/5 1296w
+                                    "
+                                    sizes="
                                 (min-width: 960px) 648px, 
                                 (min-width: 960px) calc((100vw - 2 * 2rem - 3rem) * 0.609), 
                                 (min-width: 640px) 576px, 
                                 calc(100vw - 2 * 2rem)"
-                            width="1296" height="972" alt="">
+                                    width="1296"
+                                    height="972"
+                                    alt=""
+                                />
+                            </div>
+                        </article>
+                    </section>
+
+                    <section class="other-skills" id="other-skills">
+                        <h2><small>More about me</small> Other skills</h2>
+                        <ul>
+                            <li>English B1</li>
+                            <li>Drivers license</li>
+                            <li>Divers license</li>
+                        </ul>
+                    </section>
+
+                    <section class="contacts" id="contacts">
+                        <h2><small>Let’s talk</small> Contacts</h2>
+                        <div class="contacts-description">
+                            <img
+                                src="https://satyr.dev/384"
+                                srcset="https://satyr.dev/192/10 192w, https://satyr.dev/384/11 384w"
+                                sizes="192px"
+                                loading="lazy"
+                                width="192"
+                                height="192"
+                                alt=""
+                            />
+                            <p>
+                                mail me at
+                                <a href="mailto:simansky.dan@gmail.com"><span>simansky.dan</span>@gmail.com</a
+                                ><br />give me a call at
+                                <a href="tel:+420723246778"><span>723 246 778</span></a>
+                                <br />
+                                <a href="https://www.linkedin.com/in/daniel-%C5%A1imansk%C3%BD-44579b261/">LinkedIn</a>
+                                <br />
+                                <a href="https://github.com/Adiosik">GitHub</a>
+                            </p>
                         </div>
-                    </article>
-                </section>
+                    </section>
+                </main>
 
-                <section class="other-skills" id="other-skills">
-                    <h2><small>More about me</small> Other skills</h2>
-                    <ul>
-                        <li>English B1</li>
-                        <li>Drivers license</li>
-                        <li>Divers license</li>
-                    </ul>
-                </section>
-
-                <section class="contacts" id="contacts">
-                    <h2><small>Let’s talk</small> Contacts</h2>
-                    <div class="contacts-description">
-                        <img src="https://satyr.dev/384" 
-                        srcset="
-                        https://satyr.dev/192/10 192w,
-                        https://satyr.dev/384/11 384w
-                        " sizes="192px" loading="lazy" width="192" height="192" alt="">
-                        <p>mail me at <a
-                                href="mailto:simansky.dan@gmail.com"><span>simansky.dan</span>@gmail.com</a><br>give me
-                            a call at <a href="tel:+420723246778"><span>723 246 778</span></a>
-                            <br>
-                            <a href="https://www.linkedin.com/in/daniel-%C5%A1imansk%C3%BD-44579b261/">LinkedIn</a>
-                            <br>
-                            <a href="https://github.com/Adiosik">GitHub</a>
-                        </p>
-                    </div>
-                </section>
-            </main>
-
-            <footer>
-                <p>© 2023 Daniel Šimanský</p>
-            </footer>
+                <footer>
+                    <p>© 2023 Daniel Šimanský</p>
+                </footer>
+            </div>
         </div>
-    </div>
-</body>
-
+    </body>
 </html>
