--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="Daniel Šimanský is a frontend developer based in Czechia. Explore his portfolio showcasing expertise in HTML, CSS, JavaScript, Git, and more. Discover projects like Project Alpha, Beta, and Gamma. Contact Daniel for collaboration or connect via LinkedIn and GitHub.">
         <link rel="stylesheet" href="style.css" />
         <title>Dan Šimanský – Portfolio</title>
     </head>
