Added span to shy

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         </ul>
                     </nav>
                     <div class="container container-nav">
-                        <h1><small>Frontend developer</small> Daniel Šiman&shy;ský</h1>
+                        <h1><small>Frontend developer</small> Daniel Šiman<span class="header-span">&shy;</span>ský</h1>
                         <div class="header-text">
                             <p>
                                 I’m Dan a front end developer based in Czechia. These are the words that tell you basic
@@ -37,7 +37,7 @@
                     <section class="technologies" id="technologies">
                         <h2>
                             <small>What can I&nbsp;work with</small>
-                            Technolo&shy;gies
+                            Technolo<span class="technologies-span">&shy;</span>gies
                         </h2>
                         <ul>
                             <li>HTML</li>
