--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
             <header>
                 <div class="container-header">
                     <nav>
-                        <ul>
-                            <li><a href="#technologies">Technologies</a></li>
-                            <li><a href="#projects">Projects</a></li>
-                            <li><a href="#other-skills">Other skills</a></li>
-                            <li><a href="#contacts">Contacts</a></li>
-                        </ul>
+                        <a href="#technologies">Technologies</a>
+                        <a href="#projects">Projects</a>
+                        <a href="#other-skills">Other skills</a>
+                        <a href="#contacts">Contacts</a>
                     </nav>
                     <div class="container container-nav">
                         <h1><small>Frontend developer</small> Daniel Šiman<span class="header-span">&shy;</span>ský</h1>
