--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="Daniel Šimanský is a frontend developer based in Czechia. Explore his portfolio showcasing expertise in HTML, CSS, JavaScript, Git, and more. Discover projects like Project Alpha, Beta, and Gamma. Contact Daniel for collaboration or connect via LinkedIn and GitHub.">
+        <meta
+            name="description"
+            content="Daniel Šimanský, a Czech frontend developer, presents his portfolio highlighting skills in HTML, CSS, JavaScript, Git, and more. Explore projects like Alpha, Beta, and Gamma. Contact for collaboration or connect on LinkedIn/GitHub."
+        />
         <link rel="stylesheet" href="style.css" />
         <title>Dan Šimanský – Portfolio</title>
     </head>
@@ -62,11 +65,22 @@
                                 </p>
                             </div>
                             <div class="project-img">
-                                <img src="https://satyr.dev/1296x972/1" srcset=" https://satyr.dev/280x4:3/1 280w,
-                                https://satyr.dev/576x4:3/2 576w, https://satyr.dev/648x4:3/3 648w,
-                                https://satyr.dev/1152x4:3/4 1152w, https://satyr.dev/1296x4:3/5 1296w" " sizes="
+                                <img
+                                    src="https://satyr.dev/1296x972/1"
+                                    srcset="
+                                        https://satyr.dev/280x4:3/1   280w,
+                                        https://satyr.dev/576x4:3/2   576w,
+                                        https://satyr.dev/648x4:3/3   648w,
+                                        https://satyr.dev/1152x4:3/4 1152w,
+                                        https://satyr.dev/1296x4:3/5 1296w
+                                    "
+                                    sizes="
                                 (min-width: 960px) 648px, (min-width: 960px) calc((100vw - 2 * 2rem - 3rem) * 0.609) ,
-                                (min-width: 640px) 576px, calc(100vw - 2 * 2rem)" width="1296" height="972" alt="">
+                                (min-width: 640px) 576px, calc(100vw - 2 * 2rem)"
+                                    width="1296"
+                                    height="972"
+                                    alt=""
+                                />
                             </div>
                         </article>
 
@@ -83,11 +97,22 @@
                                 </p>
                             </div>
                             <div class="project-img">
-                                <img src="https://satyr.dev/1296x972/1" srcset=" https://satyr.dev/280x4:3/1 280w,
-                                https://satyr.dev/576x4:3/2 576w, https://satyr.dev/648x4:3/3 648w,
-                                https://satyr.dev/1152x4:3/4 1152w, https://satyr.dev/1296x4:3/5 1296w" " sizes="
+                                <img
+                                    src="https://satyr.dev/1296x972/1"
+                                    srcset="
+                                        https://satyr.dev/280x4:3/1   280w,
+                                        https://satyr.dev/576x4:3/2   576w,
+                                        https://satyr.dev/648x4:3/3   648w,
+                                        https://satyr.dev/1152x4:3/4 1152w,
+                                        https://satyr.dev/1296x4:3/5 1296w
+                                    "
+                                    sizes="
                                 (min-width: 960px) 648px, (min-width: 960px) calc((100vw - 2 * 2rem - 3rem) * 0.609) ,
-                                (min-width: 640px) 576px, calc(100vw - 2 * 2rem)" width="1296" height="972" alt="">
+                                (min-width: 640px) 576px, calc(100vw - 2 * 2rem)"
+                                    width="1296"
+                                    height="972"
+                                    alt=""
+                                />
                             </div>
                         </article>
 
