--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <a href="#other-skills">Other skills</a>
                         <a href="#contacts">Contacts</a>
                     </nav>
-                    <div class="container container-nav">
+                    <div class="container">
                         <h1><small>Frontend developer</small> Daniel Šiman<span class="header-span">&shy;</span>ský</h1>
                         <div class="header-text">
                             <p>
@@ -37,7 +37,6 @@
                 <main>
                     <section class="technologies" id="technologies">
                         <h2>
-                            <small>What can I&nbsp;work with</small>
                             Technolo<span class="technologies-span">&shy;</span>gies
                         </h2>
                         <ul>
