--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <a href="#contacts">Contacts</a>
                     </nav>
                     <div class="container">
-                        <h1><small>Frontend developer</small> Daniel Šiman<span class="header-span">&shy;</span>ský</h1>
+                        <h1><small class="overheading overheading-header">Frontend developer</small> Daniel Šiman<span class="header-span">&shy;</span>ský</h1>
                         <div class="header-text">
                             <p>
                                 I’m Dan a front end developer based in Czechia. These are the words that tell you basic
@@ -49,7 +49,7 @@
                     </section>
 
                     <section class="projects" id="projects">
-                        <h2><small>What did I do</small> Projects</h2>
+                        <h2><small class="overheading">What did I do</small> Projects</h2>
 
                         <article class="project">
                             <div class="project-text">
@@ -151,7 +151,7 @@
                     </section>
 
                     <section class="other-skills" id="other-skills">
-                        <h2><small>More about me</small> Other skills</h2>
+                        <h2><small class="overheading">More about me</small> Other skills</h2>
                         <ul>
                             <li>English B1</li>
                             <li>Drivers license</li>
@@ -160,7 +160,7 @@
                     </section>
 
                     <section class="contacts" id="contacts">
-                        <h2><small>Let’s talk</small> Contacts</h2>
+                        <h2><small class="overheading">Let’s talk</small> Contacts</h2>
                         <div class="contacts-description">
                             <img
                                 src="https://satyr.dev/384"
