--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <body>
         <div class="container-body">
-            <header>
+            <header class="header-main">
                 <div class="container-header">
                     <nav>
                         <a href="#technologies">Technologies</a>
@@ -22,7 +22,7 @@
                         <a href="#contacts">Contacts</a>
                     </nav>
                     <div class="container">
-                        <h1><small class="overheading overheading-header">Frontend developer</small> Daniel Šiman<span class="header-span">&shy;</span>ský</h1>
+                        <h1><small class="overheading header-overheading">Frontend developer</small> Daniel Šiman<span class="header-span">&shy;</span>ský</h1>
                         <div class="header-text">
                             <p>
                                 I’m Dan a front end developer based in Czechia. These are the words that tell you basic
@@ -35,7 +35,7 @@
 
             <div class="container">
                 <main>
-                    <section class="technologies" id="technologies">
+                    <section class="main-section technologies" id="technologies">
                         <h2>
                             Technolo<span class="technologies-span">&shy;</span>gies
                         </h2>
@@ -48,7 +48,7 @@
                         </ul>
                     </section>
 
-                    <section class="projects" id="projects">
+                    <section class="main-section projects" id="projects">
                         <h2><small class="overheading">What did I do</small> Projects</h2>
 
                         <article class="project">
@@ -150,7 +150,7 @@
                         </article>
                     </section>
 
-                    <section class="other-skills" id="other-skills">
+                    <section class="main-section other-skills" id="other-skills">
                         <h2><small class="overheading">More about me</small> Other skills</h2>
                         <ul>
                             <li>English B1</li>
@@ -159,7 +159,7 @@
                         </ul>
                     </section>
 
-                    <section class="contacts" id="contacts">
+                    <section class="main-section contacts" id="contacts">
                         <h2><small class="overheading">Let’s talk</small> Contacts</h2>
                         <div class="contacts-description">
                             <img
