--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container-body">
             <header class="header-main">
                 <div class="container-header">
-                    <nav>
+                    <nav class="navigation">
                         <a href="#technologies">Technologies</a>
                         <a href="#projects">Projects</a>
                         <a href="#other-skills">Other skills</a>
