Hidden wrap changed

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <a href="#contacts">Contacts</a>
                     </nav>
                     <div class="container">
-                        <h1><small class="overheading header-overheading">Frontend developer</small> Daniel Šiman<span class="prevent-wrap hidden-shy">&shy;</span>ský</h1>
+                        <h1><small class="overheading header-overheading">Frontend developer</small> Daniel Šiman<span class="hidden-wrap"></span>ský</h1>
                         <div class="header-text">
                             <p>
                                 I’m Dan a front end developer based in Czechia. These are the words that tell you basic
@@ -37,7 +37,7 @@
                 <main>
                     <section class="main-section technologies" id="technologies">
                         <h2>
-                            Technolo<span class="prevent-wrap hidden-shy">&shy;</span>gies
+                            Technolo<span class="hidden-wrap"></span>gies
                         </h2>
                         <ul>
                             <li>HTML</li>
