--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
         />
         <link rel="stylesheet" href="style.css" />
         <link rel="preconnect" href="https://fonts.bunny.net" />
-        <link href="https://fonts.bunny.net/css?family=roboto:400,700" rel="stylesheet" />
-        <link href="https://fonts.bunny.net/css?family=lora:400,700" rel="stylesheet" />
+        <link
+            href="https://fonts.bunny.net/css2?family=Lora:wght@400;700&family=Roboto:wght@400;700&display=swap"
+            rel="stylesheet"
+        />
         <title>Dan Šimanský – Portfolio</title>
     </head>
 
