--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
         <link rel="stylesheet" href="style.css" />
         <link rel="preconnect" href="https://fonts.bunny.net" />
         <link
-            href="https://fonts.bunny.net/css2?family=Lora:wght@400;700&family=Roboto:wght@400;700&display=swap"
+            href="https://fonts.bunny.net/css2?family=Lora:wght@400;700&family=Roboto:wght@500&display=swap"
             rel="stylesheet"
+        />
         />
         <title>Dan Šimanský – Portfolio</title>
     </head>
@@ -181,6 +182,7 @@
                         <h2><small class="overheading">Let’s talk</small> Contacts</h2>
                         <div class="contacts">
                             <img
+                                class="contacts__photo"
                                 src="https://satyr.dev/384"
                                 srcset="https://satyr.dev/192/10 192w, https://satyr.dev/384/11 384w"
                                 sizes="192px"
