description of portfolio webpage project

--- a/index.html
+++ b/index.html
@@ -66,14 +66,18 @@
 
                         <article class="project">
                             <div class="project__description">
-                                <h3 class="project__name">Project Alpha</h3>
+                                <h3 class="project__name">Portfolio Webpage</h3>
                                 <p>
-                                    The description of the project, what was done by you, what have you learned. What
-                                    were the technologies and methodologies used to create this project.
+                                    This is the current Portfolio Webpage you are viewing. It is a static web project that follows
+                                    the BEM (Block Element Modifier) methodology for a structured and maintainable codebase.
                                 </p>
                                 <p>
-                                    See the <a href="#">website</a> and check the
-                                    <a href="https://github.com/Adiosik">source code on GitHub</a>
+                                    The website is designed with responsiveness in mind, ensuring optimal viewing across different devices. It utilizes
+                                    media queries for a responsive layout and implements image optimization techniques
+                                </p>
+                                <p>
+                                    See the <a href="https://adiosik.github.io/">website</a> and check the
+                                    <a href="https://github.com/Adiosik/adiosik.github.io">source code on GitHub</a>
                                 </p>
                             </div>
                             <div class="project__image-container">
