--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta
             name="description"
-            content="Daniel Šimanský, a Czech frontend developer, presents his portfolio highlighting skills in HTML, CSS, JavaScript, Git, and more. Explore projects like Alpha, Beta, and Gamma. Contact for collaboration or connect on LinkedIn/GitHub."
+            content="Daniel Šimanský, Czech frontend dev with HTML, CSS, JS skills. Actively seeking opportunities. Explore projects: Alpha, Beta, Gamma. Connect on LinkedIn/GitHub."
         />
+        <meta name="msapplication-TileColor" content="#1e2929" />
+        <meta name="theme-color" content="fddcc3" />
+        <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png" />
+        <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png" />
+        <link rel="manifest" href="favicons/site.webmanifest" />
+        <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#1e2929" />
         <link rel="stylesheet" href="style.css" />
         <link rel="preconnect" href="https://fonts.bunny.net" />
         <link
@@ -68,12 +75,14 @@
                             <div class="project__description">
                                 <h3 class="project__name">Portfolio Webpage</h3>
                                 <p>
-                                    This is the current Portfolio Webpage you are viewing. It is a static web project that follows
-                                    the BEM (Block Element Modifier) methodology for a structured and maintainable codebase.
+                                    This is the current Portfolio Webpage you are viewing. It is a static web project
+                                    that follows the BEM (Block Element Modifier) methodology for a structured and
+                                    maintainable codebase.
                                 </p>
                                 <p>
-                                    The website is designed with responsiveness in mind, ensuring optimal viewing across different devices. It utilizes
-                                    media queries for a responsive layout and implements image optimization techniques
+                                    The website is designed with responsiveness in mind, ensuring optimal viewing across
+                                    different devices. It utilizes media queries for a responsive layout and implements
+                                    image optimization techniques
                                 </p>
                                 <p>
                                     See the <a href="https://adiosik.github.io/">website</a> and check the
