--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
             name="description"
             content="Daniel Šimanský, a Czech frontend developer, presents his portfolio highlighting skills in HTML, CSS, JavaScript, Git, and more. Explore projects like Alpha, Beta, and Gamma. Contact for collaboration or connect on LinkedIn/GitHub."
         />
+        <meta name="msapplication-TileColor" content="#1e2929" />
+        <meta name="theme-color" content="fddcc3" />
+        <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png" />
+        <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png" />
+        <link rel="manifest" href="favicons/site.webmanifest" />
+        <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#1e2929" />
         <link rel="stylesheet" href="style.css" />
         <link rel="preconnect" href="https://fonts.bunny.net" />
         <link
