correction in the text of the website project

--- a/index.html
+++ b/index.html
@@ -66,17 +66,17 @@
 
                         <article class="project">
                             <div class="project__description">
-                                <h3 class="project__name">Portfolio Webpage</h3>
+                                <h3 class="project__name">Portfolio Web Page</h3>
                                 <p>
-                                    This is the current Portfolio Webpage you are viewing. It is a static web project that follows
+                                    This is the current Portfolio Webpage you are viewing. It is a static web page that follows
                                     the BEM (Block Element Modifier) methodology for a structured and maintainable codebase.
                                 </p>
                                 <p>
                                     The website is designed with responsiveness in mind, ensuring optimal viewing across different devices. It utilizes
-                                    media queries for a responsive layout and implements image optimization techniques
+                                    media queries for a responsive layout and implements image optimization techniques.
                                 </p>
                                 <p>
-                                    See the <a href="https://adiosik.github.io/">website</a> and check the
+                                    Check the
                                     <a href="https://github.com/Adiosik/adiosik.github.io">source code on GitHub</a>
                                 </p>
                             </div>
