--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="style.css" />
         <link rel="preconnect" href="https://fonts.bunny.net" />
         <link
-            href="https://fonts.bunny.net/css2?family=Lora:wght@400;700&family=Roboto:wght@500&display=swap"
+            href="https://fonts.bunny.net/css2?family=Lora:wght@400&family=Open+Sans:wght@600&display=swap"
             rel="stylesheet"
         />
         <title>Dan Šimanský – Portfolio</title>
